<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.wordpress.maddymindlinks.sharedplaces.PostActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/event_small"
            android:padding="20dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_textinputlayout"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_event_name_here"
                android:id="@+id/event_edittext"
                android:inputType="text"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/cat_spinner"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc_textinputlayout"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/event_description"
                android:id="@+id/desc_edittext"
                android:inputType="text"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/event_images"
            android:src="@drawable/event_small"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Address_textinputlayout"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/address_edittext"
                android:inputType="text"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Phone_textinputlayout"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number(+91)"
                android:id="@+id/phone_edittext"
                android:inputType="number"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_textinputlayout"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location_name"
                android:id="@+id/location_edittext"
                android:inputType="text"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorTextHint"
            android:id="@+id/event_button_Post"
            android:text="@string/button_post"
            android:textColor="@color/bg_main"
            android:layout_marginTop="15dp"
            />
        </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
